<resources>
    <string name="app_name">SweetHome</string>
    <string name="checkout_confirm">Checkout</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="confirm_checkout">Checkout</string>
    <string name="shop_catalog_title">Furniture</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="about_title">About</string>
    <string name="designer_field">Designer</string>
    <string name="checkout_title">Checkout</string>
    <string name="delivery_from">Shipping\nfrom %s</string>
    <string name="items_on">%s items on</string>
    <string name="subtotal_price">Subtotal: %s</string>
    <string name="shipment_price">Shipping: %s</string>
    <string name="total_price_title">Total</string>
    <string name="shipment_address">Shipping to</string>
    <string name="delivery_type">Delivery</string>
    <string name="payment_type">Payment</string>
    <string name="time_from_to">%1$s-%2$s days</string>
    <string name="delivery_time">%s days</string>
    <string name="description_back">Back</string>
    <string name="description_cart">Cart</string>
    <string name="description_empty_cart">Cart is empty</string>
    <string name="description_price">Price: %s</string>
    <string name="description_all_price">Price for all: %s</string>
    <string name="description_total_price_title">To pay: %s</string>

    <plurals name="count_items_description">
        <item quantity="zero">cart is empty</item>
        <item quantity="one">cart %1$d items</item>
        <item quantity="two">cart %1$d items</item>
        <item quantity="few">cart %1$d items</item>
        <item quantity="many">cart %1$d items</item>
        <item quantity="other">cart %1$d items</item>
    </plurals>
</resources>