<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/price_info_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_shipment"
                style="@style/HeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:text="@string/shipment_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sweethome.base.selector.HorizontalSelector
                android:id="@+id/shipment_address_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_delivery"
                style="@style/HeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:text="@string/delivery_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/delivery_types_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/title_payment"
                style="@style/HeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:text="@string/payment_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sweethome.base.selector.HorizontalSelector
                android:id="@+id/payment_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_price"
            app:layout_constraintBottom_toTopOf="@id/shipment_price"
            app:layout_constraintEnd_toStartOf="@id/total"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shipment_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipment_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_title"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/total_price"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="₽ 3835" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/round_corner_rectangle"
        android:gravity="center"
        android:text="@string/checkout_confirm"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>