<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <com.sweethome.utils.SquareImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:srcCompat="@drawable/placeholder" />

            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:gravity="center_horizontal"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_corner_rectangle"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_title"
                android:textColor="@color/black_primary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black_55"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_12" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_designer"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:importantForAccessibility="yes"
                android:screenReaderFocusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/designer_field"
                    android:textSize="16sp"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintEnd_toStartOf="@id/designer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/designer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/designer_field"
                    android:layout_marginEnd="12dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    app:layout_constraintEnd_toStartOf="@id/forward"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    app:srcCompat="@drawable/ic_arrow_forward"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>